feat(thread): try virtual thread